fix minor issues for header and footer, aligning center for desktop view TODO: fix overflowing in desktop view

--- a/src/UserProfile/style.css
+++ b/src/UserProfile/style.css
@@ -9,9 +9,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 500px;
+    max-width: 530px;
     left: 50%;
     transform: translateX(-50%);
+    background-color: #0a0a0a;
+    z-index: 9999;
 }
 
 .profile-footer{
@@ -21,10 +23,12 @@
     position: fixed;
     text-align: center;
     line-height: 60px;
-    max-width: 500px;
+    max-width: 530px;
     left: 50%; /* Left based on the size of the parent, transform: translate based on the element, same for top */
     /* Basically move to the right 50% - 50% of the element*/
     transform: translateX(-50%); /* Will not need this if length of element is 0 */
+    z-index: 9999;
+    background-color: #0a0a0a;
 }
 
 .nav-svg{
@@ -40,8 +44,9 @@
 
 .profile-main{
     width: 100%;
-    height: calc(100% - 50px);
+    height: calc(100% - 60px);
     padding: 48px 0;
+    margin: 0 auto;
 }
 
 .basic-info{
@@ -444,8 +449,13 @@
     font-size: 24px;
     display: flex;
     gap: 5px;
+    cursor: pointer;
     align-items: center;
     justify-content: flex-start;
+}
+
+.action:hover{
+    opacity: 0.5;
 }
 
 .stat{
